Flexible sidebar, resizable. Fixed bugs:    * collapsed sidebar not fully hidden.    * minor 3d viewport glitch fixed

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -152,3 +152,8 @@ body, html, .full-height {
   border-left: 1px #ccc dashed;
   border-right: 1px #ccc dashed;
 }
+
+#sidebar.folded {
+    flex-grow:0;
+    max-width:0;
+}
